Legend:

[+] New/improved feature 
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.4.5

[B][pipeline] Fixed critical bug in __of1x_destroy_all_entries_from_timer_group() leading to a memory corruption

v0.4.4

[B][common] cmacaddr: use right macros in sscanf #29 

[B][pipeline] Fixed critical bug in __of1x_get_time_ms() for 32bit compilers leading to dead-lock in timers.

v0.4.3

[B][common] Fixed bug for match ARP_THA used invalid constants for OXM type 
[B][common] cofmatch.h: added method get_ipv6_flabel_value() and get_ipv6_flabel_mask(), according to spec
[B][common] Minor changes to coxmatch.h
[B][common] cofportstatsarray: corrected minor issue in output operator 
[B][common] cofmsg_flow_removed::unpack(): invalid length for unpacking matches 
[B][common] caddress.h: added missing dump of port number #11 
[B][common] Fixed preconditions for nw_tos and nw_proto in OF1.0 #2(reopened) 

[B][pipeline] Fixed bug in __of1x_process_instructions(), WRITE_METADATA corrected  
[B][pipeline] Fixed metaports for multi-process deployments
[B][pipeline] Fixed bug in __of1x_dump_matches() for IPV6_FLABEL

v0.4.2

[K] Automake 1.4 compilation. Please refer to the README.

[B][common] Fixed bug cofactions in method append_action()
[B][pipeline] Fixed compilation issues for 32 bit systems

v0.4.1

[K] Automake 1.4 compilation. Please refer to the README.

[B][common] OpenFlow 1.0.1 clarified handling of wildcards #2
[B][common] Fixed bug in port stats for OFP1.2; corrected length check

[+][pipeline] Async APIs not shown in doxygen documentation #1

v0.4.0
v0.4RC2

[K] Automake 1.4 compilation. Please refer to the README.

[+][hal] Improved doxygen documentation 

[+][pipeline] Improved doxygen documentation 
[+][pipeline] Unified the criteria used to align matches and actions in the pipeline. Changed constructors to use Host Byte Order. 

v0.4RC1

[K] Automake 1.4 compilation. Please refer to the README.
